--- a/templates/actors/npc-sheet.html
+++ b/templates/actors/npc-sheet.html
@@ -290,7 +290,7 @@
         <!--<div class="divTableCell"></div>-->
     </div>
     <div class="divTableRow">
-        <div class="divTableCell"style="text-align:right">Glyde</div>
+        <div class="divTableCell"style="text-align:right">Glide</div>
         <div class="divTableCell"><input style="width: 40px" disabled="true" type="number" name="system.attributes.speed.glide.base" value="{{systemData.attributes.speed.glide.base}}"/></div>
         <!--<div class="divTableCell"></div>-->
     </div>
