--- a/templates/actors/parts/actor-features-item.html
+++ b/templates/actors/parts/actor-features-item.html
@@ -116,7 +116,7 @@
                 {{item.system.subclass}}
             </div>
             <div class="item-detail">
-                Level {{item.system.levels}}
+                {{localize item.system.bab}}
             </div>
             {{else if section.isRace}}
             <div class="item-detail player-race">
