--- a/templates/chat/parts/attack-roll-header.hbs
+++ b/templates/chat/parts/attack-roll-header.hbs
@@ -16,8 +16,9 @@
 </header>
 
 <div class="card-content">
-  {{enrich description rollData=@root.rollData}}
-</div>
+  {{description}}
+  <!-- enrich description rollData=@root.rollData}} -->
+  </div>
  
  
 
