--- a/templates/items/sensor.html
+++ b/templates/items/sensor.html
@@ -18,6 +18,7 @@
 
         {{!-- Details Tab --}}
         <div class="tab details" data-group="primary" data-tab="details">
+            {{> "systems/Alternityd100/templates/items/parts/item-status.html"}}
             {{> "systems/Alternityd100/templates/items/parts/physical-item-details.html"}}
         </div>
 
