--- a/templates/actors/starship-sheet-full.html
+++ b/templates/actors/starship-sheet-full.html
@@ -504,7 +504,7 @@
                                 <button class="tag attack">{{localize "d100A.actionattack"}}</button>
                                 {{/if}}
                                 {{#if item.hasScan}}
-                                <button class="tag scan">{{localize "SCAN"}}</button>
+                                <button class="tag scan">{{localize "d100A.actionscan"}}</button>
                                 {{/if}}
 
                                 {{#if item.hasDamage}}
