--- a/templates/items/parts/item-status.html
+++ b/templates/items/parts/item-status.html
@@ -9,7 +9,7 @@
            
                 {{/if}}
              
-                    <input type="checkbox" name="system.identified" {{checked itemData.identified}}/> {{ localize "SFRPG.Items.Identified" }}
+                    <input type="checkbox" name="system.isSkilled" {{checked itemData.isSkilled}}/> {{ localize "SFRPG.Items.IsSkilled" }}
        
             </div>
  
