--- a/templates/actors/parts/actor-skills.html
+++ b/templates/actors/parts/actor-skills.html
@@ -51,7 +51,7 @@ Source: How to Indent in HTML? (Simple Guide) - Dopinger (https://blog.dopinger.
         {{#if (or skill.show ../systemData.skillpoints.showAllSkills )}}
 
         {{#if (eq skill.ability "str")}}
-        <div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}">
+        <div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}" data-actorid="{{../actor.id}}">
             <input 
             {{#if skill.type}} {{#if skill.untrained}} style="width:50% ;text-align:left;font-size: 70%;height:50%; text-indent: 10px "  {{else}}
             style="width:50% ;text-align:left;font-size: 70%;height:50%;color: rgb(0, 95, 87);text-indent: 10px " {{/if}} {{else}}
@@ -84,7 +84,8 @@ Source: How to Indent in HTML? (Simple Guide) - Dopinger (https://blog.dopinger.
 {{#if (or skill.show ../systemData.skillpoints.showAllSkills )}}
 
 {{#if (eq skill.ability "dex")}}
-<div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}">
+
+<div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}" data-actorid="{{../actor.id}}">
     <input 
     {{#if skill.type}} {{#if skill.untrained}} style="width:50% ;text-align:left;font-size: 70%;height:50%; text-indent: 10px "  {{else}}
     style="width:50% ;text-align:left;font-size: 70%;height:50%;color: rgb(0, 95, 87);text-indent: 10px " {{/if}} {{else}}
@@ -115,7 +116,7 @@ Source: How to Indent in HTML? (Simple Guide) - Dopinger (https://blog.dopinger.
 
 {{#if (or skill.show ../systemData.skillpoints.showAllSkills )}}
 {{#if (eq skill.ability "con")}}
-<div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}">
+<div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}" data-actorid="{{../actor.id}}">
 <input 
 {{#if skill.type}} {{#if skill.untrained}} style="width:50% ;text-align:left;font-size: 70%;height:50%; text-indent: 10px "  {{else}}
 style="width:50% ;text-align:left;font-size: 70%;height:50%;color: rgb(0, 95, 87);text-indent: 10px " {{/if}} {{else}}
@@ -158,7 +159,7 @@ value="{{skill.ranks}}" />
 {{#each systemData.skills as |skill s|}}
 {{#if (or skill.show ../systemData.skillpoints.showAllSkills )}}
 {{#if (eq skill.ability "int")}}
-<div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}">
+<div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}" data-actorid="{{../actor.id}}">
 <input 
 {{#if skill.type}} {{#if skill.untrained}} style="width:50% ;text-align:left;font-size: 70%;height:50%; text-indent: 10px "  {{else}}
 style="width:50% ;text-align:left;font-size: 70%;height:50%;color: rgb(0, 95, 87);text-indent: 10px " {{/if}} {{else}}
@@ -204,7 +205,7 @@ style="width:50% ;text-align:left;font-size: 70%;height:50%;color: rgb(0, 95, 87
             {{#each systemData.skills as |skill s|}}
             {{#if (or skill.show ../systemData.skillpoints.showAllSkills )}}
             {{#if (eq skill.ability "wil")}}
-            <div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}">
+            <div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}" data-actorid="{{../actor.id}}">
                 <input 
                 {{#if skill.type}} {{#if skill.untrained}} style="width:50% ;text-align:left;font-size: 70%;height:50%; text-indent: 10px "  {{else}}
                 style="width:50% ;text-align:left;font-size: 70%;height:50%;color: rgb(0, 95, 87);text-indent: 10px " {{/if}} {{else}}
@@ -232,7 +233,7 @@ style="width:50% ;text-align:left;font-size: 70%;height:50%;color: rgb(0, 95, 87
     {{#each systemData.skills as |skill s|}}
     {{#if (or skill.show ../systemData.skillpoints.showAllSkills )}}
     {{#if (eq skill.ability "per")}}
-    <div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}">
+    <div class="skilldrag" data-skill="{{s}}" data-tooltip="Skillname: {{s}}" data-actorid="{{../actor.id}}">
         <input 
         {{#if skill.type}} {{#if skill.untrained}} style="width:50% ;text-align:left;font-size: 70%;height:50%; text-indent: 10px "  {{else}}
         style="width:50% ;text-align:left;font-size: 70%;height:50%;color: rgb(0, 95, 87);text-indent: 10px " {{/if}} {{else}}
