--- a/templates/items/pharmaceutical.html
+++ b/templates/items/pharmaceutical.html
@@ -18,8 +18,15 @@
 
         {{!-- Details Tab --}}
         <div class="tab details" data-group="primary" data-tab="details">
+            {{> "systems/Alternityd100/templates/items/parts/item-status.html"}}
+            {{#if isSkilled}}
             {{> "systems/Alternityd100/templates/items/parts/item-skilled.html"}}
+            {{/if}}
         </div>
+
+        {{!-- Item Activation Template --}}
+        
+
 
         {{!-- Modifiers Tab --}}
         {{> "systems/Alternityd100/templates/items/parts/item-modifiers.html"}}
