--- a/templates/items/communication.html
+++ b/templates/items/communication.html
@@ -18,7 +18,12 @@
 
         {{!-- Details Tab --}}
         <div class="tab details" data-group="primary" data-tab="details">
-            {{> "systems/Alternityd100/templates/items/parts/physical-item-details.html"}}
+            <h3 class="form-header">{{ localize "Communications" }}</h3>
+            {{> "systems/Alternityd100/templates/items/parts/item-status.html"}}
+           
+            {{#if isSkilled}}
+            {{> "systems/Alternityd100/templates/items/parts/item-skilled.html"}}
+            {{/if}}
         </div>
 
         {{!-- Modifiers Tab --}}
