--- a/templates/actors/parts/actor-modifiers.html
+++ b/templates/actors/parts/actor-modifiers.html
@@ -5,42 +5,45 @@
 </nav>
 
 <section class="modifiers-body">
+
     {{#each sections as |section sid|}}
-    <div class="tab {{section.dataset.subtab}} {{#unless section.isConditions}}flexrow{{else}}flexcol{{/unless}}" data-group="modifiers" data-tab="{{section.dataset.subtab}}">
-       {{section.isConditions}}
+    <div class="tab {{section.dataset.subtab}} {{#unless section.isConditions}}flexrow{{else}}flexcol{{/unless}}"
+        data-group="modifiers" data-tab="{{section.dataset.subtab}}">
+
         {{#if section.isConditions}}
-        isConditions
+
         <div class="form-group stacked conditions">
             {{#each ../d100Aconfig.conditionTypes as |condition name|}}
-            <label class="checkbox" data-tippy-content="{{lookup (lookup ../../d100Aconfig.conditions name) "tooltip"}}">
-                <input type="checkbox" 
-                       class="condition {{name}}" 
-                       data-condition="{{name}}" 
-                       name="system.conditions.{{name}}" 
-                       {{checked (lookup ../../system.conditions name)}} /> {{condition}}
+            <label class="checkbox" data-tippy-content="{{lookup (lookup ../../d100Aconfig.conditions name) "
+                tooltip"}}">
+                <input type="checkbox" class="condition {{name}}" data-condition="{{name}}"
+                    name="system.conditions.{{name}}" {{checked (lookup ../../system.conditions name)}} /> {{condition}}
             </label>
             {{/each}}
         </div>
-
+        {{console "actorModifiers 24"}}
+{{console this}}
         <ol class="inventory-list">
             <li class="inventory-header flexrow">
-                <h3 class="item-name flexrow">Conditions</h3>
-        
+                <h3 class="item-name flexrow">Bonus</h3>
+
                 {{#if ../isOwner}}
                 <div class="item-controls">
-                    {{#if section.allowAdd}}
-                    <a class="item-control item-create" title="{{localize "SFRPG.ActorSheet.Inventory.Item.Create"}}" {{#each section.dataset as |v k|}}data-{{k}}="{{v}}"{{/each}}>
+                    {{#if true}}
+                    <a class="item-control item-create" title="{{localize " SFRPG.ActorSheet.Inventory.Item.Create"}}"
+                        {{#each section.dataset as |v k|}}data-{{k}}="{{v}}" {{/each}}>
                         <i class="fas fa-plus"></i> {{localize "SFRPG.InventoryAdd"}}
                     </a>
                     {{/if}}
                 </div>
                 {{/if}}
             </li>
-        
+
             <ol class="item-list">
-            {{#each section.items as |item iid|}}
-                {{> "systems/Alternityd100/templates/actors/parts/actor-inventory-item.html" ../../this bigItem=true item=item onlyControls=true}}
-            {{/each}}
+                {{#each section.items as |item iid|}}
+                {{> "systems/Alternityd100/templates/actors/parts/actor-inventory-item.html" ../../this bigItem=true
+                item=item onlyControls=true}}
+                {{/each}}
             </ol>
         </ol>
         {{else}}
@@ -51,15 +54,17 @@
                 </div>
 
                 <div class="item-detail modifier-mod">{{localize "SFRPG.ModifierTitle"}}</div>
-<!--
+                <!--
                 <div class="item-detail modifier-type">{{localize "SFRPG.ModifierTypeLabel"}}</div>
 -->
 
                 <div class="item-detail modifier-effect-type">{{localize "SFRPG.ModifierEffectTypeHeaderLabel"}}</div>
-                <div class="item-detail modifier-value-affected">{{localize "SFRPG.ModifierValueAffectedHeaderLabel"}}</div>
+                <div class="item-detail modifier-value-affected">{{localize "SFRPG.ModifierValueAffectedHeaderLabel"}}
+                </div>
                 {{#if ../isOwner}}
                 <div class="item-controls">
-                    <a class="item-control modifier-create" {{#each section.dataset as |v k|}}data-{{k}}="{{v}}"{{/each}} title="Add Modifier">
+                    <a class="item-control modifier-create" {{#each section.dataset as |v k|}}data-{{k}}="{{v}}"
+                        {{/each}} title="Add Modifier">
                         <i class="fas fa-plus"></i> {{localize "SFRPG.AddLabel"}}
                     </a>
                 </div>
@@ -68,7 +73,9 @@
 
             <ol class="modifier-list item-list">
                 {{#each section.modifiers as |modifier mid|}}
-                <li class="item modifier flexrow" data-tippy-content="<strong>{{modifier.name}}</strong><br>{{#if modifier.enabled}}Enabled{{else}}Disabled{{/if}}{{#if modifier.notes}}<br><br>Notes<hr>{{modifier.notes}}{{/if}}" data-modifier-id="{{modifier._id}}">
+                <li class="item modifier flexrow"
+                    data-tippy-content="<strong>{{modifier.name}}</strong><br>{{#if modifier.enabled}}Enabled{{else}}Disabled{{/if}}{{#if modifier.notes}}<br><br>Notes<hr>{{modifier.notes}}{{/if}}"
+                    data-modifier-id="{{modifier._id}}">
                     <div class="item-name modifier-name flexrow">
                         <h4>{{~modifier.name~}}</h4>
                     </div>
@@ -92,61 +99,65 @@
                     <div class="item-detail modifier-value-affected">
                         {{#if (eq modifier.effectType "ac")}}
                         {{lookup ../../d100Aconfig.modifierResistanceAffectedValues modifier.valueAffected}}
-                        <!--Alternaity addition-->    
+                        <!--Alternaity addition-->
                         {{else if (eq modifier.effectType "hit-points")}}
                         {{lookup ../../d100Aconfig.modifierHitPointsAffectedValues modifier.valueAffected}}
-                        
+
                         {{else if (eq modifier.effectType "initiative")}}
                         {{localize (lookup ../../d100Aconfig.modifierActionCheckAffectedValues modifier.valueAffected)}}
-                        <!--/Alternaity addition-->  
+                        <!--/Alternaity addition-->
                         {{else if (eq modifier.effectType "acp")}}
-                            {{lookup ../../config.acpEffectingArmorType modifier.valueAffected}}
+                        {{lookup ../../config.acpEffectingArmorType modifier.valueAffected}}
                         {{else if (eq modifier.effectType "ability-skills")}}
-                            {{lookup ../../config.abilities modifier.valueAffected}}
+                        {{lookup ../../config.abilities modifier.valueAffected}}
                         {{else if (eq modifier.effectType "ability-check")}}
-                            {{lookup ../../config.abilities modifier.valueAffected}}
+                        {{lookup ../../config.abilities modifier.valueAffected}}
 
                         <!-- Alternaity change   -->
                         {{else if (eq modifier.effectType "ability-score")}}
-                            {{localize (lookup ../../d100Aconfig.abilities modifier.valueAffected)}}
+                        {{localize (lookup ../../d100Aconfig.abilities modifier.valueAffected)}}
 
 
                         {{else if (eq modifier.effectType "skill")}}
-                            {{lookup ../../d100Aconfig.skills modifier.valueAffected}}
+                        {{lookup ../../d100Aconfig.skills modifier.valueAffected}}
 
 
 
                         {{else if (eq modifier.effectType "skill-ranks")}}
-                            {{lookup ../../config.skills modifier.valueAffected}}
+                        {{lookup ../../config.skills modifier.valueAffected}}
                         {{else if (eq modifier.effectType "save")}}
-                            {{#if (eq modifier.valueAffected "highest")}}
-                                {{localize "SFRPG.ModifierSaveHighest"}}
-                            {{else if (eq modifier.valueAffected "lowest")}}
-                                {{localize "SFRPG.ModifierSaveLowest"}}
-                            {{else}}
-                                {{lookup ../../config.saves modifier.valueAffected}}
-                            {{/if}}
+                        {{#if (eq modifier.valueAffected "highest")}}
+                        {{localize "SFRPG.ModifierSaveHighest"}}
+                        {{else if (eq modifier.valueAffected "lowest")}}
+                        {{localize "SFRPG.ModifierSaveLowest"}}
+                        {{else}}
+                        {{lookup ../../config.saves modifier.valueAffected}}
+                        {{/if}}
                         {{else if (eq modifier.effectType "weapon-attacks")}}
-                            {{lookup ../../config.weaponTypes modifier.valueAffected}}
+                        {{lookup ../../config.weaponTypes modifier.valueAffected}}
                         {{else if (eq modifier.effectType "weapon-property-attacks")}}
-                            {{lookup ../../config.weaponProperties modifier.valueAffected}}
+                        {{lookup ../../config.weaponProperties modifier.valueAffected}}
                         {{else if (eq modifier.effectType "weapon-damage")}}
-                            {{lookup ../../config.weaponTypes modifier.valueAffected}}
+                        {{lookup ../../config.weaponTypes modifier.valueAffected}}
                         {{else if (eq modifier.effectType "weapon-property-damage")}}
-                            {{lookup ../../config.weaponProperties modifier.valueAffected}}
+                        {{lookup ../../config.weaponProperties modifier.valueAffected}}
                         {{else if (eq modifier.effectType "specific-speed")}}
-                            {{lookup ../../config.speeds modifier.valueAffected}}
+                        {{lookup ../../config.speeds modifier.valueAffected}}
                         {{else if (eq modifier.effectType "actor-resource")}}
-                            <h4>{{~modifier.valueAffected~}}</h4>
+                        <h4>{{~modifier.valueAffected~}}</h4>
                         {{else}}
                         {{!-- Nothing --}}
                         {{/if}}
                     </div>
                     {{#if ../../isOwner}}
                     <div class="item-controls">
-                        <a class="item-control modifier-toggle" data-tippy-content="Toggle Modifier">{{#if modifier.enabled}}<i class="far fa-check-square">{{else}}<i class="far fa-square"></i>{{/if}}</i></a>
-                        <a class="item-control modifier-edit" data-tippy-content="Edit Modifier"><i class="fas fa-edit"></i></a>
-                        <a class="item-control modifier-delete" data-tippy-content="Delete Modifier"><i class="fas fa-trash"></i></a>
+                        <a class="item-control modifier-toggle" data-tippy-content="Toggle Modifier">{{#if
+                            modifier.enabled}}<i class="far fa-check-square">{{else}}<i
+                                    class="far fa-square"></i>{{/if}}</i></a>
+                        <a class="item-control modifier-edit" data-tippy-content="Edit Modifier"><i
+                                class="fas fa-edit"></i></a>
+                        <a class="item-control modifier-delete" data-tippy-content="Delete Modifier"><i
+                                class="fas fa-trash"></i></a>
                     </div>
                     {{/if}}
                 </li>
