--- a/templates/actors/character-sheet.html
+++ b/templates/actors/character-sheet.html
@@ -219,7 +219,7 @@
             <div class="divTableCell"style="text-align:right">STR<input disabled="true" type="number" name="system.abilities.str.value" value="{{systemData.abilities.str.value}}"/><input type="number" name="system.abilities.str.base" value="{{systemData.abilities.str.base}}"/></div>
 
             <div class="divTableCell"><input disabled="true" type="number" data-tooltip="{{system.abilities.str.tooltip}}" name="system.abilities.str.resModValue" value="{{systemData.abilities.str.resModValue}}"/></div>
-            <div class="divTableCell"><button style="height: 20px;" type="image" src="/icons/svg/d20-black.svg"  class="attribute-button" data-roll="str"></button> </div>
+            <div class="divTableCell"><button style="height: 20px;" type="image" src="systems/Alternityd100/images/core/Fig_0.1.png"  class="attribute-button" data-attr="str"></button> </div>
 
 
 
@@ -228,27 +228,27 @@
             <div class="divTableRow">
                 <div class="divTableCell"style="text-align:right">DEX<input disabled="true" type="number" name="system.abilities.dex.value" value="{{systemData.abilities.dex.value}}"/><input type="number" name="system.abilities.dex.base" value="{{systemData.abilities.dex.base}}"/></div>
                 <div class="divTableCell"><input disabled="true" data-tooltip="{{system.abilities.dex.tooltip}}" type="number" name="system.abilities.dex.resModValue" value="{{systemData.abilities.dex.resModValue}}"/></div>
-                <div class="divTableCell"><button style="height: 20px;" type="image" src="/icons/svg/d20-black.svg"  class="attribute-button" data-roll="dex"></button> </div>
+                <div class="divTableCell"><button style="height: 20px;" type="image" src="/icons/svg/d20-black.svg"  class="attribute-button" data-attr="dex"></button> </div>
             </div>
             <div class="divTableRow">
                 <div class="divTableCell"style="text-align:right">CON<input  disabled="true" type="number" name="system.abilities.con.value" value="{{systemData.abilities.con.value}}"/><input type="number" name="system.abilities.con.base" value="{{systemData.abilities.con.base}}"/></div>
                 <div class="divTableCell"><input disabled="true" type="number" data-tooltip="{{system.abilities.con.tooltip}}" name="system.abilities.con.resModValue" value="{{systemData.abilities.con.resModValue}}"/></div>
-                <div class="divTableCell"><button style="height: 20px;" type="image" src="/icons/svg/d20-black.svg"  class="attribute-button" data-roll="con"></button> </div>
+                <div class="divTableCell"><button style="height: 20px;" type="image" src="/icons/svg/d20-black.svg"  class="attribute-button" data-attr="con"></button> </div>
             </div>
             <div class="divTableRow">
                 <div class="divTableCell"style="text-align:right">INT<input  disabled="true" type="number" name="system.abilities.int.value" value="{{systemData.abilities.int.value}}"/><input type="number" name="system.abilities.int.base" value="{{systemData.abilities.int.base}}"/></div>
                 <div class="divTableCell"><input disabled="true" type="number" data-tooltip="{{system.abilities.int.tooltip}}" name="system.abilities.int.resModValue" value="{{systemData.abilities.int.resModValue}}"/></div>
-                <div class="divTableCell"><button style="height: 20px;" type="image" src="/icons/svg/d20-black.svg"  class="attribute-button" data-roll="int"></button> </div>
+                <div class="divTableCell"><button style="height: 20px;" type="image" src="/icons/svg/d20-black.svg"  class="attribute-button" data-attr="int"></button> </div>
             </div>
             <div class="divTableRow">
                 <div class="divTableCell"style="text-align:right">WIL<input disabled="true" type="number" name="system.abilities.wil.value" value="{{systemData.abilities.wil.value}}"/><input type="number" name="system.abilities.wil.base" value="{{systemData.abilities.wil.base}}"/></div>
                 <div class="divTableCell"><input disabled="true" type="number" data-tooltip="{{system.abilities.wil.tooltip}}" name="system.abilities.wil.resModValue" value="{{systemData.abilities.wil.resModValue}}"/></div>
-                <div class="divTableCell"><button style="height: 20px;" type="image" src="/icons/svg/d20-black.svg"  class="attribute-button" data-roll="wil"></button> </div>
+                <div class="divTableCell"><button style="height: 20px;" type="image" src="/icons/svg/d20-black.svg"  class="attribute-button" data-attr="wil"></button> </div>
             </div>
             <div class="divTableRow">
                 <div class="divTableCell"style="text-align:right">PER<input disabled="true"type="number" name="system.abilities.per.value" value="{{systemData.abilities.per.value}}"/><input type="number" name="system.abilities.per.base" value="{{systemData.abilities.per.base}}"/></div>
                 <div class="divTableCell"><input disabled="true" type="number" data-tooltip="{{system.abilities.per.tooltip}}" name="system.abilities.per.resModValue" value="{{systemData.abilities.per.resModValue}}"/></div>
-                <div class="divTableCell"><button style="height: 20px;" type="image" src="/icons/svg/d20-black.svg"  class="attribute-button" data-roll="per"></button> </div>
+                <div class="divTableCell"><button style="height: 20px;" type="image" src="/icons/svg/d20-black.svg"  class="attribute-button" data-attr="per"></button> </div>
             </div>
             </div>
             </div>  
