--- a/templates/items/parts/item-status.html
+++ b/templates/items/parts/item-status.html
@@ -10,6 +10,6 @@
                 {{/if}}
              
                     <input type="checkbox" name="system.isSkilled" {{checked itemData.isSkilled}}/> {{ localize "SFRPG.Items.IsSkilled" }}
-       
+                    <input type="checkbox" name="system.isOpposed" {{checked itemData.isOpposed}}/> {{ localize "SFRPG.Items.isOpposed" }}
             </div>
  
